[gd_scene load_steps=4 format=3 uid="uid://c0f0h24u7wfrh"]

[ext_resource type="Texture2D" uid="uid://b8a1xfqe1gfp5" path="res://main_window/top_bar/search_bar/images/search.svg" id="1_1sgf3"]
[ext_resource type="Script" path="res://main_window/top_bar/search_bar/search_bar.gd" id="1_6r0fp"]
[ext_resource type="Script" path="res://custom/tooltip.gd" id="3_s4ac0"]

[node name="SearchBar" type="PanelContainer"]
offset_right = 215.0
offset_bottom = 28.0
size_flags_horizontal = 3
mouse_default_cursor_shape = 1
theme_type_variation = &"SearchBar"
script = ExtResource("1_6r0fp")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_type_variation = &"SmallSeparation"
alignment = 1

[node name="Icon" type="Button" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
theme_override_constants/icon_max_width = 20
icon = ExtResource("1_1sgf3")
flat = true

[node name="Tooltip" type="Node" parent="HBox/Icon"]
script = ExtResource("3_s4ac0")
text = "Search"
popup_position = 4
gap_width = 12

[node name="SearchQuery" type="LineEdit" parent="HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(118, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_type_variation = &"LineEdit_Minimal"
placeholder_text = "Search To-Dos..."
context_menu_enabled = false
clear_button_enabled = true
select_all_on_focus = true
caret_blink = true
caret_blink_interval = 0.45

[node name="ShortcutHint" type="Button" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 1
theme_type_variation = &"SearchBar_ShortcutHint"
text = "CTRL + F"
